# labprog

./: #grafico.c#  #main.c#  .#grafico.c  .#main.c  .gitignore  Makefile  Makefile~  README.md  Structs.h  afundador.c  afundador.h  barco.c  barco.h  barco.h~  combate.c  combate.c~  combate.h  grafico.c  grafico.c~  grafico.h  grafico.h~  interface.c  interface.c~  interface.h  jogo  main.c  main.c~  maphandling.c  maphandling.h  output
labprog/: README.md  Structs.h  Structs.h.gch  Structs.h~  afundador.c  afundador.h  barco.c  barco.h  combate.c  combate.c~  combate.h  identifica.c  input  interface.h  iput~  leia_mapa.c  leia_mapa.c~  main.c  maphandling.c  maphandling.h  output  posiciona_barco.c  posiciona_barco.c~  sorteia.c  sorteia.c~  sorteia.h  sorteia.h~
labprog/InOut/: #output#  iput
labprog/labprog/: README.md  Structs.h  input~  leia_mapa.c  sorteia.h.gch
labprog/mapas/: input  posiciona_barco.c~
mapas/: mapa3.dat~
texturas/: 00.xpm  01.xpm  02.xpm  03.xpm  04.xpm  05.xpm  06.xpm  07.xpm  08.xpm  09.xpm  10.xcf  10.xpm  11.xcf  11.xpm  12.xcf  12.xpm  13.xcf  13.xpm  14.xcf  14.xpm  15.xcf  15.xpm  16.xcf  16.xpm  17.xcf  17.xpm  18.xcf  18.xpm  19.xcf  19.xpm  20.xcf  20.xpm  21.xcf  21.xpm  22.xcf  22.xpm  23.xcf  23.xpm  24.xcf  24.xpm  (+63 more)
xwc/: Makefile  config.status  configure  configure.in  teste  teste.c  teste2  teste2.c  teste3  teste3.c  xwc.c  xwc.tar
